Bug 1373655 - Fix search sign and arrow indicator in high contrast theme r=dao
MozReview-Commit-ID: GweiQoZ9bXk

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -657,14 +657,15 @@ groupbox {
 
 menulist[indicator=true] > menupopup menuitem:not([image]) > .menu-iconic-left {
   display: -moz-box;
-  width: 10px;
+  width: 8px;
   min-width: auto; /* Override the min-width defined in menu.css */
   height: 10px;
   margin-inline-end: 6px;
 }
 
-menulist[indicator=true] > menupopup menuitem[indicator=true]:not([image]) > .menu-iconic-left {
-  background-image: url(chrome://global/skin/icons/search-arrow-indicator.svg);
-  background-repeat: no-repeat;
-  background-size: 12px 10px;
+menulist[indicator=true] > menupopup menuitem[indicator=true]:not([image]) > .menu-iconic-left > .menu-iconic-icon {
+  list-style-image: url(chrome://global/skin/icons/search-arrow-indicator.svg);
+  width: 8px;
+  height: 10px;
+  margin: 0;
 }
